--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
+    "embla-carousel-class-names": "^8.0.0",
+    "embla-carousel-react": "^8.0.0",
     "env-var": "^7.4.1",
     "framer-motion": "^11.0.6",
     "immer": "^10.0.3",
