--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "rm -rf .next &&  NEXT_PRIVATE_LOCAL_WEBPACK=true next dev -p 3001",
-    "build": "NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
+    "build": "next telemetry disable && NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
     "start": "next start -p 3001",
     "lint": "next lint"
   },
